12/1.5/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: mtool
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mtool
  template:
    metadata:
      labels:
        app: mtool
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 80
          name: mtool-http
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: mtool
  ports:
  - name: svc-mtool-http
    protocol: TCP
    port: 80
    targetPort: mtool-http
