12/1.5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: ingress.com
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
             name: frontend-svc
             port:
               number: 80
        - pathType: Prefix
          path: /api
          backend:
            service:
             name: backend-svc
             port:
               number: 80
